# find-apartments

./: README.md  manage.py  pyproject.toml
find_apartments/: asgi.py  settings.py  urls.py  wsgi.py
find_apartments_app/: apps.py
