[tool.poetry]
name = "find-apartments"
version = "0.1.0"
description = "A Python package built to assist in finding and comparing available apartments. It gathers and filters listings from several sources to ease your apartment hunting process"
authors = ["bythewaters <bythewaters800@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
black = "^23.10.1"
flake8 = "^6.1.0"
django-debug-toolbar = "^4.2.0"
django-crispy-forms = "^2.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
| foo.py  # also separately exclude a file named foo.py in
          # the root of the project
)
'''
